--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build: .
     ports:
-      - "8000:8000"
+      - "${WEB_PORT}:8000"
     environment:
       - DEBUG
       - SECRET_KEY
