--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,9 @@ services:
     volumes:
       - .:/code
     command: python manage.py runserver 0.0.0.0:8000 --insecure
+    
+    
+networks: 
+  default:
+    external:
+      name: postgres_default
